--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -174,38 +174,37 @@
 {% block title %}Shop Item - {{ product.name }}{% endblock %}
 
 {% block content %}
-<section class="py-5">
+<section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
-            <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                                       src="{{ product.image.url }}" alt="..."/></div>
             <div class="col-md-6">
-                <div class="small mb-1">Rating: {{ product.rating }}</div>
-                <h1 class="display-5 fw-bolder">{{ product.name }}</h1>
+                <img class="card-img-top mb-5 mb-md-0" src="{{ product.image.url }}" alt="..."/>
+            </div>
+            <div class="col-md-6">
+                <div class="small mb-1 text-muted">Rating: {{ product.rating }}</div>
+                <h1 class="display-5 fw-bolder text-danger">{{ product.name }}</h1>
                 <div class="fs-5 mb-5">
-                    <span class="text-decoration-line-through">${{ product.price }}</span>
-                    <span>${{ product.discounted_price }}</span>
+                    <span class="text-decoration-line-through text-muted">${{ product.price }}</span>
+                    <span class="text-warning">${{ product.discounted_price }}</span>
                 </div>
                 <p class="lead">{{ product.description }}</p>
                 <div class="d-flex">
                     <form method="POST" action="{% url 'order_add' %}">
                         {% csrf_token %}
                         <div class="form-group">
-                            <h2>Place an order</h2>
+                            <h2 class="text-danger">Place an order</h2>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="id_name">Your name</label>
-                            <input type="text" id="id_name" name="name" class="form-control" placeholder="Your name">
+                            <label for="id_name" class="text-dark">Your name</label>
+                            <input type="text" id="id_name" name="name" class="form-control bg-white text-dark border-danger" placeholder="Your name">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="id_email">Your email</label>
-                            <input type="email" id="id_email" name="email" class="form-control" placeholder="Your email">
+                            <label for="id_email" class="text-dark">Your email</label>
+                            <input type="email" id="id_email" name="email" class="form-control bg-white text-dark border-danger" placeholder="Your email">
                         </div>
-
                         <input type="hidden" name="product_id" value="{{ product.id }}">
-
                         <div class="form-group mb-3">
-                            <button type="submit" class="btn btn-success">Place Order</button>
+                            <button type="submit" class="btn btn-outline-danger">Place Order</button>
                         </div>
                     </form>
                 </div>
@@ -217,33 +216,32 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h2>Latest comments</h2>
+                    <h2 class="text-danger">Latest comments</h2>
                 </div>
 
                 <!-- Latest comments section -->
                 {% for comment in product.comments.all %}
-                <div class="media card p-4 mt-2">
+                <div class="media card p-4 mt-2 bg-white text-dark border-light">
                     <div class="media-body">
-                        <h3 class="mt-0">{{ comment.name }}</h3>
+                        <h3 class="mt-0 text-warning">{{ comment.name }}</h3>
                         <p>{{ comment.body }}</p>
                         <small class="text-muted">{{ comment.created_at }}</small>
                     </div>
                 </div>
                 {% endfor %}
-
             </div>
 
             <!-- Comment section -->
             <div class="col-8 offset-2 mt-5">
-                <div class=" p-5">
+                <div class="p-5 bg-white text-dark border-light">
                     <div class="text-center">
-                        <h3>Add Comment</h3>
+                        <h3 class="text-danger">Add Comment</h3>
                     </div>
                     <form method="post" action="{% url 'add_comment' product.id %}">
                         {% csrf_token %}
                         {{ comment_form.as_p }}
                         <div class="form-group mb-3">
-                            <button type="submit" class="btn btn-success">Add Comment</button>
+                            <button type="submit" class="btn btn-warning">Add Comment</button>
                         </div>
                     </form>
                 </div>
@@ -254,22 +252,20 @@
     <!-- Related items section -->
     <section class="py-5 bg-light">
         <div class="container px-4 px-lg-5 mt-5">
-            <h2 class="fw-bolder mb-4">Related products</h2>
+            <h2 class="fw-bolder mb-4 text-danger">Related products</h2>
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 {% for related_product in related_products %}
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <img class="card-img-top"
-                             src="{{ related_product.image.url }}" alt="..."/>
+                    <div class="card h-100 bg-white text-dark border-danger">
+                        <img class="card-img-top" src="{{ related_product.image.url }}" alt="..."/>
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <h5 class="fw-bolder">{{ related_product.name }}</h5>
-                                ${{ related_product.discounted_price }} - ${{ related_product.price }}
+                                <h5 class="fw-bolder text-danger">{{ related_product.name }}</h5>
+                                <span class="text-warning">${{ related_product.discounted_price }}</span> - <span class="text-muted">${{ related_product.price }}</span>
                             </div>
                         </div>
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto"
-                                                        href="{% url 'product_detail' related_product.slug %}">View Product</a></div>
+                            <div class="text-center"><a class="btn btn-outline-danger mt-auto" href="{% url 'product_detail' related_product.slug %}">View Product</a></div>
                         </div>
                     </div>
                 </div>
@@ -279,4 +275,9 @@
     </section>
 </section>
 {% endblock %}
+
+
+
+
+
 
